--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/09/06 10:49:25</td>   <td>3416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.invalidLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">invalidLogin</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:25</td>   <td>3937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:25</td>   <td>4062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/09/06 10:49:28</td>   <td>6458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.invalidLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">invalidLogin</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:28</td>   <td>6856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:28</td>   <td>6959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/09/06 10:49:31</td>   <td>9485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.invalidLogin(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">invalidLogin</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:32</td>   <td>10497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:32</td>   <td>10620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="ca907e">  <td>20/09/06 10:49:35</td>   <td>13573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.validLogin()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">validLogin</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>20/09/06 10:49:49</td>   <td>27643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.LoginTests@6ee52dcd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:20:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/09/06 22:20:27</td>   <td>3390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeeTest.addEmployee(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">addEmployee</td> 
+  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:20:38</td>   <td>14171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:20:38</td>   <td>14366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/09/06 22:20:42</td>   <td>17785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeeTest.addEmployee(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">addEmployee</td> 
+  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:20:58</td>   <td>34320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:20:58</td>   <td>34511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/09/06 22:21:01</td>   <td>36828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeeTest.addEmployee(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">addEmployee</td> 
+  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:21:14</td>   <td>49578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:21:14</td>   <td>49793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/09/06 22:21:16</td>   <td>51951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeeTest.addEmployee(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">addEmployee</td> 
+  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:21:28</td>   <td>63697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:21:28</td>   <td>63896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="ca907e">  <td>20/09/06 22:21:30</td>   <td>66029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddEmployeeTest.addEmployee(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">addEmployee</td> 
+  <td>main@1122805102</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/09/06 22:21:54</td>   <td>89658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hrms.testcases.AddEmployeeTest@4493d195]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1122805102</td>   <td></td> </tr>
 </table>
